➕ Add  `overflow: hidden` to the `.search>.search-container` to prevent `.button-container` to overflow & wrap inside `.search-container`

--- a/css/style.css
+++ b/css/style.css
@@ -60,6 +60,8 @@ header {
   border-radius: 10px;
   border: 2px solid #222328;
   display: flex;
+
+  overflow: hidden;
 }
 
 .input-container {
